--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             are in the town square. Where do you want to go? Use the buttons above.
         </div>
     </div>
+    <div id="footer">
+        Made With ♡ by Jason - Credit : FreeCodeCamp
+    </div>
     <script src="./game.js"></script>
 </body>
+
 
 </html>
