--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
             <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
         </div>
         <div id="controls">
-            <button id="button1">Yes</button>
-            <button id="button2">No</button>
-            <button id="button3">Double Yes</button>
+            <button id="button1">Go to store</button>
+            <button id="button2">Go to cave</button>
+            <button id="button3">Fight dragon</button>
         </div>
         <div id="monsterStats">
             <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
             <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
         </div>
         <div id="text">
-           Hey Devika Will You Marry Me?
+            Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You
+            are in the town square. Where do you want to go? Use the buttons above.
         </div>
     </div>
     <div id="footer">
